fix pricing article alignments

--- a/src/styles/components/faq.scss
+++ b/src/styles/components/faq.scss
@@ -1,7 +1,6 @@
 .article.article-faq {
   align-self: center;
   flex-wrap: wrap;
-  margin: 0 30px;
   max-width: 1020px;
 
   @include media(md) {
