--- a/src/styles/pricing/article-explanation.scss
+++ b/src/styles/pricing/article-explanation.scss
@@ -1,24 +1,12 @@
 .article-explanation {
   align-self: center;
   border-bottom: 1px solid $gray-lighter;
-  margin: 0 60px;
   max-width: 960px;
-  padding: 90px 0;
-
-  @include media(md) {
-    padding: 75px 0;
-  }
-
-  @include media(sm) {
-    padding: 60px 0;
-  }
+  padding-bottom: 90px;
+  padding-top: 90px;
 
   @include media(xs) {
     flex-direction: column;
-  }
-
-  @include media(xxs) {
-    margin: 0 30px;
   }
 
   > .grid-block {
