--- a/src/styles/pricing/article-pricing-cloud.scss
+++ b/src/styles/pricing/article-pricing-cloud.scss
@@ -1,5 +1,6 @@
 .article-pricing-cloud {
   background: $gray-lighterest;
+  border-bottom: 1px solid rgba($gray-lighter,.5);
 
   .grid-container-sm {
     max-width: 660px;
